Wrote some tests testing the functionality of the updateHarvestDate method